--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,9 +17,9 @@
     /* Very Light Gray for Sidebars */
     --muted-foreground: 215.4 16.3% 46.9%;
 
-    --border: 214.3 31.8% 91.4%;
-    /* Light Border */
-    --input: 214.3 31.8% 91.4%;
+    --border: 214.3 31.8% 82%;
+    /* Bolder Light Border */
+    --input: 214.3 31.8% 82%;
   }
 
   .dark {
