--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,18 @@
     --border: 214.3 31.8% 82%;
     /* Bolder Light Border */
     --input: 214.3 31.8% 82%;
+
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+
+    --ring: 240 5.9% 10%;
+    --radius: 0.75rem;
   }
 
   .dark {
@@ -40,6 +52,17 @@
     --border: 217.2 32.6% 17.5%;
     /* Dark Border */
     --input: 217.2 32.6% 17.5%;
+
+    --primary: 84 81% 62%;
+    --primary-foreground: 240 5.9% 10%;
+
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+
+    --ring: 84 81% 62%;
   }
 }
 
