fix(server): remove unused sqlite3 require causing crash

--- a/server/templates/payslip.hbs
+++ b/server/templates/payslip.hbs
@@ -295,7 +295,7 @@
                     <td class="amount-col">{{formatCurrency calculations.baseSalary}}</td>
                 </tr>
                 <tr>
-                    <td>Overtime <span class="badge badge-adj">{{calculations.totalOvertimeHours}} Hours</span></td>
+                    <td>Overtime <span class="badge badge-adj">{{calculations.overtimeHours}} Hours</span></td>
                     <td class="amount-col">{{formatCurrency calculations.overtimeTotal}}</td>
                 </tr>
                 <tr>
